# src/main/resources/openApi3Commandes.yml
@@ -66,41 +66,12 @@ paths:
             application/xml:
               schema:
                 $ref: "#/components/schemas/Commande"
-          links:
-            getCommandeById:  
-              operationId: getCommande
-              parameters:
-                identifiant: '$response.body#/components/schemas/Commande/identifiant'
-              description: >
-                Utilisation de l'identifiant retournée dans la réponse pour pouvoir consulter la commande par son identifiant avec `GET /commandes/{identifiant}`.
         "400":
           description: Echec de crÃ©ation, donnÃ©es invalides
           links:
             aideUsageApi:
               operationRef: 'http://aide.api.ventes/index.html'
-
   /commandes/{identifiant}:
-    delete:
-      tags:
-        - Gestion des commandes
-      summary: Suppression d'une commande
-      description: suppression de la commande Ã  partir de son identifiant
-      operationId: deleteCommande
-      parameters:
-        - name: identifiant
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        "204":
-          description: delete ok sans content
-          links:
-            getToutesCommandes:  
-              operationId: getCommandes
-              description: Liste complète des commandes.          
-        "404":
-          description: Identificant commande inconnu
     get:
       tags:
         - Gestion des commandes
@@ -122,23 +93,9 @@ paths:
                 $ref: "#/components/schemas/Commande"
             application/xml:
               schema:
-                $ref: "#/components/schemas/Commande"
-          links:
-            getCommandeById:  
-              operationId: getCommande
-              parameters:
-                identifiant: '$response.body#/components/schemas/Commande/identifiant'
-              description: self
-            deleteCommande:
-               operationId: deleteCommande
-               parameters:
-                identifiant: '$response.body#/components/schemas/Commande/identifiant'
-               description: suppression commande si règles de gestion l'autorisent               
-            getToutesCommandes:  
-              operationId: getCommandes
-              description: Liste complète des commandes.          
+                $ref: "#/components/schemas/Commande"         
         "404":
-          description: Identificant commande inconnu
+          description: Identificant commande inconnu              
 components:
   schemas:
     Identifiant:
